COMMIT 26.10.18 - Versão desktop finalizada

--- a/ShootingRange.uproject
+++ b/ShootingRange.uproject
@@ -3,5 +3,15 @@
 	"EngineAssociation": "4.20",
 	"Category": "",
 	"Description": "",
-	"Enterprise": true
+	"Enterprise": true,
+	"Modules": [
+		{
+			"Name": "ShootingRange",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"CoreUObject"
+			]
+		}
+	]
 }
